--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "test": "mocha tests  --exit",
-    "test:watch": "mocha --watch ./src/tests/*.test.js"
+    "dev": "nodemon run.js",
+    "test": "mocha tests  --exit"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "@types/mime": "^4.0.0",
+    "apollo-server-express": "^3.13.0",
     "app-module-path": "^2.2.0",
     "app-root-path": "^3.1.0",
     "bcrypt": "^5.1.1",
@@ -20,6 +21,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
+    "graphql": "^16.8.1",
+    "graphql-http": "^1.22.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
@@ -28,12 +31,14 @@
     "pg-hstore": "^2.3.4",
     "redis": "^4.6.13",
     "rsmq": "^0.12.4",
+    "ruru": "^2.0.0-beta.11",
     "sequelize": "^6.37.2",
     "winston": "^3.13.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.12.2",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.12.3",
     "chai": "^5.1.0",
     "mocha": "^10.4.0",
     "nodemon": "^3.1.0",
